--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
 
+
+@media (max-width: 768px){}
 * {
     padding: 0;
     margin: 0;
@@ -34,7 +36,7 @@ a,
 nav, 
 .nav-links {
     display: flex;
-    justify-content: flex-end;
+    justify-content: flex;
     height: 5vh;
     padding: 0 20px;
 }
@@ -189,15 +191,20 @@ section {
     
 }
 
+#profile .section__pic-container{
+    border:black 0.15rem solid;
+    border-radius: 20rem;
+    padding: px;
+
+}
+
 .section__pic-container {
     display: flex; 
     height: 400px;
     width: 400px;
     margin: auto 0;
-    border-color: rgb(163, 163, 163);
-    border-radius: 10rem;
+    
 }
-
 
 .section__text {
     align-self: center;
@@ -348,7 +355,10 @@ section {
 #about .section__pic-container {
    display: flex;
    height: 400px;
-   
+   border:black 0.15rem solid;
+   border-radius: 2.1rem;
+   padding: px;
+
 
 
 }
@@ -436,7 +446,7 @@ article .icon{
     display: flex;
     justify-content: center;
     border-radius: 3rem;
-    border: rgb(53, 53, 53) 0.1rem solid;
+    border: rgb(5, 5, 5) 0.1rem solid;
     border-color: rgb(163, 163, 163);
     background: (250,250,250);
     margin: 1rem auto;
